Bug 1581066 - Perfherder graphs zoom fix Change zoom so it doesn't reset when test visibility changes; fix overflowing legend card links

--- a/ui/css/perf.css
+++ b/ui/css/perf.css
@@ -49,6 +49,7 @@ h1 {
 }
 
 .graph-legend-card > p {
+  word-wrap: break-word;
   cursor: pointer;
   font-size: 13px;
 }
